# clogger

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  build  index.html  params.json
include/: clogger.h  config.h  console_transport.h  file_transport.h  internals.h  log_entry.h  log_filter.h  log_formatter.h  message_buffer.h  message_filter.h  transport.h  typedefs.h
src/: clogger.c  console_transport.c  file_transport.c  log_entry.c  log_filter.c  log_formatter.c  message_buffer.c  message_filter.c  transport.c
test/: .logger.test.c.swp  CMakeLists.txt  console_transport.test.c  default_logger.test.c  file_transport.test.c  logger.test.c
